--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_script:
   - gem install awesome_bot
 
 script:
-  - awesome_bot README.md --allow-redirect --allow-ssl
+  - awesome_bot README.md --allow-redirect --allow-ssl --white-list https://www.openbsd.org/mail.html
 
 notifications:
   email:
